kubernetes-modules/13-network-policies/connecting-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-test
  labels: 
    app: network-policy-test
spec:
  containers:
  - image: curlimages/curl
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: connecting-pod
  restartPolicy: Always
