kubernetes-modules/13-network-policies/deployment-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-application-int
spec:
  selector:
    app: web-application
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-application
  labels:
    app: web-application
    workshop: workshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
        workshop: workshop
    spec:
      containers:
        - name: web-application
          image: syseleven/k8s-workshop-web-application:1.0.0
          ports:
            - containerPort: 80
              name: http
