kubernetes-modules/13-network-policies/allow-web-application.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-web-application
spec:
  podSelector:
    matchLabels:
      app: web-application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: network-policy-test
